--- a/ConferenceDude.Client/SessionWindow.xaml
+++ b/ConferenceDude.Client/SessionWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ConferenceDude.Client"
         mc:Ignorable="d"
+        AutomationProperties.AutomationId="MainWindow"
         Title="Sessions" Height="450" Width="800" MinHeight="450" MinWidth="800" Initialized="Window_Initialized">
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
