--- a/ConferenceDude.Client/App.xaml
+++ b/ConferenceDude.Client/App.xaml
@@ -1,8 +1,6 @@
-﻿<Application x:Class="ConferenceDude.Client.App"
+﻿<Application x:Class="ConferenceDude.UI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ConferenceDude.Client"
-             StartupUri="SessionWindow.xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
          
     </Application.Resources>
