--- a/ConferenceDude.Client/SessionWindow.xaml
+++ b/ConferenceDude.Client/SessionWindow.xaml
@@ -1,47 +1,78 @@
-﻿<Window x:Class="ConferenceDude.Client.SessionWindow"
+﻿<Window x:Name="SessionView" x:Class="ConferenceDude.UI.SessionWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ConferenceDude.Client"
+        xmlns:ui="clr-namespace:ConferenceDude.UI"
         mc:Ignorable="d"
-        Title="Sessions" Height="450" Width="800" MinHeight="450" MinWidth="800" Initialized="Window_Initialized">
-    <Grid Margin="10">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="Auto" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
+        Title="Sessions" MinHeight="450" MinWidth="800" Initialized="Window_Initialized" d:DataContext="{d:DesignInstance Type=ui:SessionsViewModel, IsDesignTimeCreatable=False}">
+    <StackPanel x:Name="SessionData" Margin="10" Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <DataGrid IsReadOnly="True" HorizontalAlignment="Stretch"
+                  Name="DataGridSessions" ItemsSource="{Binding Path=Sessions}"  SelectionMode="Single" SelectedItem="{Binding CurrentSession, Mode=TwoWay}" Margin="1,1,1,10" AutoGenerateColumns="False"  >
+            <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding Id, Mode=OneWay}" Header="Id"/>
+                <DataGridTextColumn Binding="{Binding Title}" Header="Title"/>
+                <DataGridTextColumn Binding="{Binding Abstract}" Header="Abstract"/>
+            </DataGrid.Columns>
+        </DataGrid>
 
-        <DataGrid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Margin="0,0,0,10" IsReadOnly="True"
-                  Name="DataGridSessions" MouseDoubleClick="DataGridSessions_MouseDoubleClick" />
+        <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" DataContext="{Binding Path= CurrentSession, Mode=OneWay, NotifyOnValidationError=True}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50" />
+                <RowDefinition Height="300" />
+            </Grid.RowDefinitions>
 
-        <Label Grid.Row="1" Grid.Column="0" Content="Id" Margin="0,0,0,10"/>
-        <TextBox Grid.Row="1" Grid.Column="1" Margin="0,0,0,10" VerticalContentAlignment="Center"
-                 TextWrapping="NoWrap" AcceptsReturn="False" IsReadOnly="True"
-                 Name="TextBoxId" />
+            <Label Grid.Column="0" Grid.Row="0" Content="Title"/>
+            <TextBox Grid.Column="1" Grid.Row="0" TextWrapping="NoWrap" AcceptsReturn="False" Name="TextBoxTitle" Text="{Binding Title}">
+                <Validation.ErrorTemplate>
+                    <ControlTemplate>
+                        <StackPanel>
+                            <AdornedElementPlaceholder x:Name="textBox" />
+                            <ItemsControl ItemsSource="{Binding}">
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding ErrorContent}" Foreground="Red" />
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                        </StackPanel>
+                    </ControlTemplate>
+                </Validation.ErrorTemplate>
+            </TextBox>
 
-        <Label Grid.Row="2" Grid.Column="0" Content="Titel" Margin="0,0,0,10"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="0,0,0,10" VerticalContentAlignment="Center"
-                 TextWrapping="NoWrap" AcceptsReturn="False"
-                 Name="TextBoxTitle" />
+            <Label Grid.Column="0" Grid.Row="1" Content="Abstract"/>
+            <TextBox Grid.Column="1" Grid.Row="1" Height="200"
+                     TextWrapping="Wrap" AcceptsReturn="True"
+                     Name="TextBoxAbstract" Text="{Binding Abstract}">
+                <Validation.ErrorTemplate>
+                    <ControlTemplate>
+                        <StackPanel>
+                            <AdornedElementPlaceholder x:Name="textBox" />
+                            <ItemsControl ItemsSource="{Binding}">
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding ErrorContent}" Foreground="Red" />
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                        </StackPanel>
+                    </ControlTemplate>
+                </Validation.ErrorTemplate>
+            </TextBox>
+        </Grid>
 
-        <Label Grid.Row="3" Grid.Column="0" Content="Zusammenfassung" />
-        <TextBox Grid.Row="3" Grid.Column="1" Height="200"
-                 TextWrapping="Wrap" AcceptsReturn="True"
-                 Name="TextBoxAbstract" />
 
-        <Button Grid.Row="1" Grid.Column="2" Content="Neue Session" VerticalAlignment="Center" Margin="10,0,0,10"
-                Name="ButtonNew" Click="ButtonNew_Click" />
-        <Button Grid.Row="2" Grid.Column="2" Content="Speichern" VerticalAlignment="Center" Margin="10,0,0,10" 
-                Name="ButtonSave" Click="ButtonSave_Click" />
-        <Button Grid.Row="3" Grid.Column="2" Content="Löschen" VerticalAlignment="Center" Margin="10,0,0,10" 
-                Name="ButtonDelete" Click="ButtonDelete_Click" />
-    </Grid>
+        <StackPanel x:Name="Commands" Orientation="Horizontal" HorizontalAlignment="Stretch" Margin="1,10,1,1">
+            <Button Content="New Session"
+                    Name="ButtonNew" Command="{Binding NewSessionCommand, Mode=OneWay}" Margin="1,1,5,1" />
+            <Button Content="Change Session"
+                Name="ButtonSave" Command="{Binding SaveSessionCommand, Mode=OneWay}" Margin="5,1,5,1"/>
+            <Button Content="Remove Session"
+                Name="ButtonDelete" Command="{Binding RemoveSessionCommand, Mode=OneWay}" Margin="5,1,5,1" />
+        </StackPanel>
+    </StackPanel>
 </Window>
